# avwx-api

./: .env.sample  .gitignore  Dockerfile  Dockerfile.example  LICENSE  apiary.apib  deploy.cmd  docker-compose.yml  gunicorn_config.py  hypercorn_config.py  ptvs_virtualenv_proxy.py  pyproject.toml  readme.md  requirements.txt  runserver.py  sample.env  test_requirements.txt  web.2.7.config  web.3.4.config  web.config  web.debug.config
.github/workflows/: docker-hub-build-push.yml  master_avwx-api-dev.yml
AVWXAPI/: __init__.py  avwx.py  avwxhandler.py  avwxhandling.py  views.py  xmltodict.py
AVWXAPI/static/css/: content-style.css  style.css
AVWXAPI/static/css/bootstrap/: bootstrap.css
AVWXAPI/static/examples/: exampleMetar.xml
AVWXAPI/static/favicons/: readmecss.txt
AVWXAPI/static/html/: about.html  contact.html  documentation.html  home.html  updates.html
AVWXAPI/static/js/: scripts.js
AVWXAPI/templates/: index.html
avwx_api/: __init__.py  api.py  app_config.py  assistants.py  avwxhandling.py  cache.py  counter.py  flight_path.py  handling.py  history.py  history_queue.py  metar.py  rollbar_handler.py  service.py  services.py  station_counter.py  station_manager.py  structs.py  token.py  validate.py  validators.py  views.py
avwx_api/api/: __init__.py  base.py  current.py  forecast.py  gfs.py  metar.py  pirep.py  router.py  search.py  station.py  taf.py
avwx_api/api/examples/: airsig.json  airsig_along.json  airsig_contains.json  mav.json  metar.json  metar_along.json  mex.json  multi_metar.json  multi_station.json  multi_summary.json  multi_taf.json  nbe.json  nbh.json  nbs.json  notam.json  notam_along.json  pirep.json  station.json  station_search.json  stations_along.json  stations_near.json  summary.json  taf.json
avwx_api/handle/: __init__.py  base.py  current.py  forecast.py  gfs.py  metar.py  notam.py  pirep.py  summary.py  taf.py
avwx_api/static/css/: style.css
avwx_api/static/examples/: exampleTaf.xml
avwx_api/static/favicons/: browserconfig.xml
avwx_api/static/html/: about.html  contact.html  documentation.html  home.html  updates.html
schema/: intents.json
templates/: user_says.yaml
tests/: __init__.py  requirements.txt  test_api.py  test_metar_taf.py  test_validators.py
util/: count_transform.py  time_delay.py
